--- a/educateurs.html
+++ b/educateurs.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html data-theme="autumn" lang="fr">
+<html data-theme="ludus" lang="fr">
 <head>
 <meta charset="utf-8"/>
 <!-- Google Tag Manager -->
@@ -11,13 +11,13 @@
 <meta content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire." name="description"/>
 <meta content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être" name="keywords"/>
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main">
 <section class="section hero">
 <h1 class="text-4xl md:text-5xl font-bold">Un allié pour l'école et les éducateurs</h1>
 <p>Vous êtes enseignant, directeur d'établissement, ou acteur du monde éducatif ? Cet espace vous est dédié. Découvrez comment la méthode Ludus Mentis crée des ponts entre la passion du jeu vidéo et les compétences essentielles à la réussite scolaire et sociale de vos élèves.</p>
