--- a/enjeux.html
+++ b/enjeux.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html data-theme="autumn" lang="fr">
+<html data-theme="ludus" lang="fr">
 <head>
 <meta charset="utf-8"/>
 <!-- Google Tag Manager -->
@@ -11,13 +11,13 @@
 <meta content="Analyse des enjeux liés aux jeux vidéo chez les jeunes : temps d'écran, gestion des émotions, risques. Découvrez comment notre approche encadrée apporte des solutions concrètes." name="description"/>
 <meta content="enjeux jeux vidéo, temps d'écran adolescent, gaming disorder, cyberharcèlement, solution parents, équilibre numérique" name="keywords"/>
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main">
 <section class="section hero">
 <h1 class="text-4xl md:text-5xl font-bold">Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
 <p>Le jeu vidéo est aujourd’hui un élément central du quotidien des jeunes. Il constitue une source de plaisir, de créativité et de socialisation, mais il suscite aussi des interrogations légitimes de la part des parents et des éducateurs. Chez Ludus Mentis, nous considérons le jeu non pas comme un problème, mais comme un terrain d’apprentissage et de développement, à condition qu’il soit encadré et réfléchi. Voici notre analyse des grands enjeux, appuyée par des données scientifiques, et les solutions que nous mettons en œuvre.</p>
@@ -117,7 +117,7 @@
 </li>
 </ol>
 </div></section>
-</main>
+<section class="card bg-base-100 shadow-md" id="ressources"><div class="card-body prose max-w-none"><h2 class="text-3xl font-bold">Ressources (références)</h2><ul><li><a href="https://www.who.int/standards/classifications/frequently-asked-questions/gaming-disorder" rel="noopener" target="_blank">OMS – Troubles liés au jeu vidéo (ICD-11)</a></li><li><a href="https://www.oecd.org/en/publications/how-s-life-for-children-in-the-digital-age_0854b900-en/full-report/introduction-and-main-findings_67c79516.html" rel="noopener" target="_blank">OCDE 2025 – Le bien-être des enfants à l’ère du numérique (statistiques d’usage)</a></li><li><a href="https://eprints.lse.ac.uk/103294/1/EU_Kids_Online_2020_March2020.pdf" rel="noopener" target="_blank">EU Kids Online 2020 – Résultats (19 pays, 25 101 enfants, 9–16 ans)</a></li><li><a href="https://www.unicef.org/innocenti/innocenti/media/11296/file/UNICEF-Innocenti-Childhood-in-a-Digital%20World-report-2025.pdf" rel="noopener" target="_blank">UNICEF 2025 – Childhood in a Digital World</a></li><li><a href="https://www.unicef.org/innocenti/media/4681/file/UNICEF-RITEC-Digital-technology-play-child-wellbeing-2022.pdf" rel="noopener" target="_blank">UNICEF/RI-TEC 2022 – Digital technology, play &amp; child wellbeing</a></li></ul><p>Nous mettons à jour cette sélection pour refléter l’état des connaissances scientifiques (OMS, OCDE, UNICEF, EU Kids Online).</p></div></section><section class="card bg-base-100 shadow-md"><div class="card-body prose max-w-none"><h2 class="text-3xl font-bold">Chiffres clés (usages &amp; santé)</h2><ul class="list-disc pl-6"><li>OCDE (2025) : 27 % des élèves de 15 ans jouent ≥ 3 h un jour de semaine. <a href="https://www.oecd.org/en/publications/how-s-life-for-children-in-the-digital-age_0854b900-en/full-report/introduction-and-main-findings_67c79516.html" rel="noopener" target="_blank">Source</a></li><li>OMS (ICD‑11) : définition du trouble lié aux jeux vidéo ; l’enjeu est l’équilibre et l’accompagnement. <a href="https://www.who.int/standards/classifications/frequently-asked-questions/gaming-disorder" rel="noopener" target="_blank">Source</a></li></ul></div></section></main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
 <script defer="True" src="assets/js/cookie-consent.js"></script></body>
