--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html data-theme="autumn" lang="fr">
+<html data-theme="ludus" lang="fr">
 <head>
 <meta charset="utf-8"/>
 <!-- Google Tag Manager -->
@@ -28,7 +28,7 @@
     }
     </script>
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
@@ -37,8 +37,6 @@
 <main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main">
 <section class="section hero">
 <img alt="Logo Ludus Mentis" class="" decoding="async" loading="lazy" src="assets/images/Ludus-Mentis-transparent.png" style="max-width:120px; margin-bottom:1em"/>
-
-
 </section>
 <section class="section card" id="concept"><div class="card-body prose max-w-none">
 <h2 class="text-3xl font-bold mt-2">Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
@@ -67,7 +65,7 @@
 </ul>
 <p class="mt-4">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
 <p class="text-center mt-8"><a class="btn btn-primary" href="enjeux.html">Voir les chiffres &amp; sources détaillés</a></p>
-</div></section>
+</div><div class="mt-4"><h3 class="text-xl font-semibold">Chiffres clés</h3><ul class="list-disc pl-6"><li>En moyenne dans les pays de l’OCDE, 27 % des élèves de 15 ans déclarent jouer aux jeux vidéo au moins trois heures un jour de semaine. <a href="https://www.oecd.org/en/publications/how-s-life-for-children-in-the-digital-age_0854b900-en/full-report/introduction-and-main-findings_67c79516.html" rel="noopener" target="_blank">OCDE (2025)</a></li><li>L’OMS reconnaît le « trouble lié aux jeux vidéo » (ICD‑11) ; il concerne une minorité de joueurs et appelle à un usage équilibré. <a href="https://www.who.int/standards/classifications/frequently-asked-questions/gaming-disorder" rel="noopener" target="_blank">OMS (ICD‑11)</a></li></ul></div></section>
 <section class="section card"><div class="card-body prose max-w-none">
 <h2 class="text-3xl font-bold mt-2">Un projet soutenu localement</h2>
 <p>Ludus Mentis est une initiative locale soutenue par la <strong>commune de walhain</strong> et la <strong>fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.</p>
