--- a/methodologie.html
+++ b/methodologie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html data-theme="autumn" lang="fr">
+<html data-theme="ludus" lang="fr">
 <head>
 <meta charset="utf-8"/>
 <!-- Google Tag Manager -->
@@ -11,18 +11,14 @@
 <meta content="Notre méthodologie s'appuie sur le cycle de Kolb pour transformer chaque partie en apprentissage durable. Découvrez notre cadre structuré pour développer les compétences." name="description"/>
 <meta content="méthodologie, pédagogie, cycle de kolb, apprentissage par l'expérience, encadrement, bienveillance" name="keywords"/>
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main"><section class="hero bg-base-200"><div class="hero-content text-center"><div class="max-w-3xl mx-auto py-8 md:py-12"><h1 class="text-4xl md:text-5xl font-bold leading-tight">Notre méthodologie : du jeu à la compétence</h1><p class="mt-4 opacity-80">Chez Ludus Mentis, nous ne nous contentons pas de faire jouer les jeunes. Nous transformons chaque partie en une opportunité d'apprentissage grâce à un cadre structuré et bienveillant, inspiré des meilleures pratiques pédagogiques.</p><div class="mt-6 flex flex-wrap gap-3 justify-center"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a><a class="btn btn-outline btn-lg" href="infos-tarifs.html">Infos &amp; Tarifs</a></div></div></div></section>
 <section class="section card"><div class="card-body prose max-w-none">
-<h1 class="text-4xl md:text-5xl font-bold">Notre méthodologie : du jeu à la compétence</h1>
-<p>
-        Chez Ludus Mentis, nous ne nous contentons pas de faire jouer les jeunes. Nous transformons chaque partie en une opportunité d'apprentissage grâce à un cadre structuré et bienveillant, inspiré des meilleures pratiques pédagogiques.
-      </p>
 <p>
         Notre approche répond à quatre enjeux majeurs : 
         <strong>santé publique</strong> (lutter contre la sédentarité), 
@@ -64,7 +60,7 @@
 <li><strong>Implication parentale :</strong> Rencontres, ateliers, et bilans de progression en fin de module avec les familles.</li>
 </ul>
 </div></section>
-</main>
+<section class="card bg-base-100 shadow-md" id="ressources"><div class="card-body prose max-w-none"><h2 class="text-3xl font-bold">Ressources (références)</h2><ul><li><a href="https://www.who.int/standards/classifications/frequently-asked-questions/gaming-disorder" rel="noopener" target="_blank">OMS – Troubles liés au jeu vidéo (ICD-11)</a></li><li><a href="https://www.oecd.org/en/publications/how-s-life-for-children-in-the-digital-age_0854b900-en/full-report/introduction-and-main-findings_67c79516.html" rel="noopener" target="_blank">OCDE 2025 – Le bien-être des enfants à l’ère du numérique (statistiques d’usage)</a></li><li><a href="https://eprints.lse.ac.uk/103294/1/EU_Kids_Online_2020_March2020.pdf" rel="noopener" target="_blank">EU Kids Online 2020 – Résultats (19 pays, 25 101 enfants, 9–16 ans)</a></li><li><a href="https://www.unicef.org/innocenti/innocenti/media/11296/file/UNICEF-Innocenti-Childhood-in-a-Digital%20World-report-2025.pdf" rel="noopener" target="_blank">UNICEF 2025 – Childhood in a Digital World</a></li><li><a href="https://www.unicef.org/innocenti/media/4681/file/UNICEF-RITEC-Digital-technology-play-child-wellbeing-2022.pdf" rel="noopener" target="_blank">UNICEF/RI-TEC 2022 – Digital technology, play &amp; child wellbeing</a></li></ul><p>Nous mettons à jour cette sélection pour refléter l’état des connaissances scientifiques (OMS, OCDE, UNICEF, EU Kids Online).</p></div></section></main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
 <script defer="True" src="assets/js/cookie-consent.js"></script></body>
