--- a/politique-de-confidentialite.html
+++ b/politique-de-confidentialite.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 
-<html data-theme="autumn" lang="fr">
+<html data-theme="ludus" lang="fr">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Politique de confidentialité - Ludus Mentis</title>
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/>
 <script src="https://cdn.tailwindcss.com"></script>
-</head>
+<link href="assets/css/theme.css" rel="stylesheet"/></head>
 <body>
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 prose max-w-none space-y-8" id="main">
-<h1 class="text-4xl md:text-5xl font-bold">Politique de confidentialité</h1>
-<p>Politique de confidentialité (RGPD) : données collectées via formulaires, consentement cookies (analytics/marketing), droits des personnes, contact : info@ludusmentis.be.</p>
+<main class="container mx-auto px-4 py-8 prose max-w-none space-y-8 space-y-12" id="main"><section class="hero bg-base-200"><div class="hero-content text-center"><div class="max-w-3xl mx-auto py-8 md:py-12"><h1 class="text-4xl md:text-5xl font-bold leading-tight">Politique de confidentialité</h1><p class="mt-4 opacity-80">Politique de confidentialité (RGPD) : données collectées via formulaires, consentement cookies (analytics/marketing), droits des personnes, contact : info@ludusmentis.be.</p><div class="mt-6 flex flex-wrap gap-3 justify-center"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a><a class="btn btn-outline btn-lg" href="infos-tarifs.html">Infos &amp; Tarifs</a></div></div></div></section>
+
+
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
