--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html data-theme="autumn" lang="fr">
+<html data-theme="ludus" lang="fr">
 <head>
 <meta charset="utf-8"/>
 <!-- Google Tag Manager -->
@@ -11,18 +11,18 @@
 <meta content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir." name="description"/>
 <meta content="FAQ, questions fréquentes, parents, compétition esport, inscription, bienveillance" name="keywords"/>
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main"><section class="hero bg-base-200"><div class="hero-content text-center"><div class="max-w-3xl mx-auto py-8 md:py-12"><h1 class="text-4xl md:text-5xl font-bold leading-tight">Foire aux questions</h1><p class="mt-4 opacity-80">Vous trouverez ici les réponses aux questions les plus fréquentes sur notre académie. 
+         Si votre question ne figure pas ici, contactez-nous : 
+         nous nous ferons un plaisir d’y répondre.</p><div class="mt-6 flex flex-wrap gap-3 justify-center"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a><a class="btn btn-outline btn-lg" href="infos-tarifs.html">Infos &amp; Tarifs</a></div></div></div></section>
 <section class="section card"><div class="card-body prose max-w-none">
-<h1 class="text-4xl md:text-5xl font-bold">Foire aux questions</h1>
-<p>Vous trouverez ici les réponses aux questions les plus fréquentes sur notre académie. 
-         Si votre question ne figure pas ici, <a class="btn btn-primary" href="contact.html">contactez-nous</a> : 
-         nous nous ferons un plaisir d’y répondre.</p>
+
+
 </div></section>
 <section class="section card"><div class="card-body prose max-w-none">
 <h2 class="text-3xl font-bold mt-2">À qui s’adresse Ludus Mentis ?</h2>
