--- a/academie.html
+++ b/academie.html
@@ -29,13 +29,13 @@
   }
   </script>
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/></head>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/><script defer="True" src="assets/js/theme.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8 space-y-12 md:space-y-12" id="main">
 <section class="section hero">
 <h1 class="text-4xl md:text-5xl font-bold">L'académie : bien plus que du jeu vidéo</h1>
 <p>Notre académie est un espace d'exploration où le jeu devient un prétexte pour grandir. Conçu pour les <strong>jeunes de 10 à 15 ans</strong>, notre programme unique tisse ensemble jeu coopératif, ateliers de développement personnel et activités créatives pour une expérience riche et équilibrée.</p>
