--- a/infos-tarifs.html
+++ b/infos-tarifs.html
@@ -11,13 +11,13 @@
 <meta content="Consultez les informations pratiques de nos modules de 7 semaines pour jeunes de 10 à 15 ans. Tarif, structure des ateliers et inscription à Walhain." name="description"/>
 <meta content="tarif stage jeu vidéo, prix académie esport, inscription, informations pratiques, module 7 semaines" name="keywords"/>
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/></head>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/><script defer="True" src="assets/js/theme.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8 space-y-12 md:space-y-12" id="main">
 <section class="section hero">
 <h1 class="text-4xl md:text-5xl font-bold">Académie : Informations et Tarifs</h1>
 <p>Découvrez notre programme de modules thématiques conçus pour transformer la pratique du jeu vidéo en une véritable compétence de vie. Pour toute autre question, <a class="btn btn-primary" href="contact.html">n'hésitez pas à nous contacter</a>.</p>
