--- a/mentions.html
+++ b/mentions.html
@@ -7,12 +7,10 @@
 <title>Mentions légales - Ludus Mentis</title>
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/>
 <script src="https://cdn.tailwindcss.com"></script>
-<link href="assets/css/theme.css" rel="stylesheet"/></head>
+<link href="assets/css/theme.css" rel="stylesheet"/><script defer="True" src="assets/js/theme.js"></script></head>
 <body>
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 prose max-w-none space-y-8 space-y-12" id="main"><section class="hero bg-base-200"><div class="hero-content text-center"><div class="max-w-3xl mx-auto py-8 md:py-12"><h1 class="text-4xl md:text-5xl font-bold leading-tight">Mentions légales</h1><p class="mt-4 opacity-80">Mentions légales pour Ludus Mentis. Voir informations d'éditeur, hébergeur, propriété intellectuelle et contact.</p><div class="mt-6 flex flex-wrap gap-3 justify-center"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a><a class="btn btn-outline btn-lg" href="infos-tarifs.html">Infos &amp; Tarifs</a></div></div></div></section>
-
-
+<main class="container mx-auto px-4 py-8 prose max-w-none space-y-8 space-y-12 md:space-y-12" id="main"><section class="hero bg-base-200"><div class="hero-content text-center"><div class="max-w-3xl mx-auto py-8 md:py-12"><h1 class="text-4xl md:text-5xl font-bold leading-tight">Mentions légales</h1><p class="mt-4 opacity-80">Mentions légales pour Ludus Mentis. Voir informations d'éditeur, hébergeur, propriété intellectuelle et contact.</p><div class="mt-6 flex flex-wrap gap-3 justify-center"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a><a class="btn btn-outline btn-lg" href="infos-tarifs.html">Infos &amp; Tarifs</a></div></div></div></section>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
