--- a/a-propos.html
+++ b/a-propos.html
@@ -28,16 +28,14 @@
   }
   </script>
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/></head>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/><script defer="True" src="assets/js/theme.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main"><section class="hero bg-base-200"><div class="hero-content text-center"><div class="max-w-3xl mx-auto py-8 md:py-12"><h1 class="text-4xl md:text-5xl font-bold leading-tight">Notre histoire : du scoutisme à l'esport</h1><p class="mt-4 opacity-80">Je m'appelle Antoine Billard, et Ludus Mentis est le projet qui rassemble toutes mes passions. Enfant, mon parcours a été un grand mélange : les valeurs de partage et de nature des scouts, la rigueur et la créativité de l'académie de musique, et l'esprit d'équipe du football. Et au milieu de tout ça, une constante : le jeu vidéo.</p><div class="mt-6 flex flex-wrap gap-3 justify-center"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a><a class="btn btn-outline btn-lg" href="infos-tarifs.html">Infos &amp; Tarifs</a></div></div></div></section>
+<main class="container mx-auto px-4 py-8 space-y-8 space-y-12 md:space-y-12" id="main"><section class="hero bg-base-200"><div class="hero-content flex-col md:flex-row gap-8"><div class="max-w-3xl mx-auto py-8 md:py-12"><h1 class="text-4xl md:text-5xl font-bold leading-tight">Notre histoire : du scoutisme à l'esport</h1><p class="mt-4 opacity-80">Je m'appelle Antoine Billard, et Ludus Mentis est le projet qui rassemble toutes mes passions. Enfant, mon parcours a été un grand mélange : les valeurs de partage et de nature des scouts, la rigueur et la créativité de l'académie de musique, et l'esprit d'équipe du football. Et au milieu de tout ça, une constante : le jeu vidéo.</p><div class="mt-6 flex flex-wrap gap-3 justify-center"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a><a class="btn btn-outline btn-lg" href="infos-tarifs.html">Infos &amp; Tarifs</a></div></div><img alt="Illustration Ludus Mentis" class="max-w-xs md:max-w-sm w-full h-auto" src="assets/images/illustrations/community.svg"/></div></section>
 <section class="section card"><div class="card-body prose max-w-none">
-
-
 <p>Pour moi, le jeu a toujours été un espace de défi, de logique et d'amitié, un fil rouge qui m'a suivi tout au long de mon parcours.</p>
 </div></section>
 <section class="section card"><div class="card-body prose max-w-none">
