--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <main class="container mx-auto px-4 py-8 space-y-8 space-y-12 md:space-y-12" id="main">
 <section class="section hero">
 <img alt="Logo Ludus Mentis" class="" decoding="async" loading="lazy" src="assets/images/Ludus-Mentis-transparent.png" style="max-width:120px; margin-bottom:1em"/>
-</section>
+</section><section class="card bg-base-100 shadow-md"><div class="card-body"><h2 class="text-2xl font-bold">Ce que l’on développe</h2><div class="flex flex-wrap gap-2"><span class="badge badge-lg">Communication</span><span class="badge badge-lg">Esprit d’équipe</span><span class="badge badge-lg">Gestion du stress</span><span class="badge badge-lg">Créativité</span><span class="badge badge-lg">Confiance en soi</span></div></div></section>
 <section class="section card" id="concept"><div class="card-body prose max-w-none">
 <h2 class="text-3xl font-bold mt-2">Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
 <p>Notre programme est conçu pour développer les compétences les plus recherchées aujourd’hui : <strong>collaboration, communication, créativité, et résolution de problèmes</strong>.</p>
