--- a/concept.html
+++ b/concept.html
@@ -21,7 +21,7 @@
 <section class="section hero">
 <h1 class="text-4xl md:text-5xl font-bold">Transformer le plaisir de jouer en compétences pour la vie</h1>
 <p>Chez Ludus Mentis, nous partons d'une conviction simple : la passion des jeunes pour le jeu vidéo est une énergie formidable. plutôt que de la freiner, nous la canalisons. nous avons créé un espace où le jeu devient un puissant levier d'apprentissage, encadré par des professionnels bienveillants.</p>
-</section>
+</section><section class="card bg-base-100 shadow-md"><div class="card-body"><h2 class="text-2xl font-bold">Ce que l’on développe</h2><div class="flex flex-wrap gap-2"><span class="badge badge-lg">Communication</span><span class="badge badge-lg">Esprit d’équipe</span><span class="badge badge-lg">Gestion du stress</span><span class="badge badge-lg">Créativité</span><span class="badge badge-lg">Confiance en soi</span></div></div></section>
 <section class="section card"><div class="card-body prose max-w-none">
 <h2 class="text-3xl font-bold mt-2">Des pixels aux compétences humaines</h2>
 <p>Au-delà des scores et des classements, chaque partie est une occasion de développer des savoir-être essentiels. voici ce que votre enfant apprend concrètement avec nous :</p>
